[package]
name = "rumqttd"
version = "0.1.0"
authors = ["tekjar <k.teza1@gmail.com>"]

[dependencies]
toml = "0.4.5"
log = "0.4.1"
structopt = "0.2.4"
structopt-derive = "0.2.4"
simplelog = "0.5.0"
chrono = "0.4.0"
lazy_static = "1.0.0"
serde_derive = "1.0.27"
serde = "1.0.27"
bytes = "0.4.6"
futures = "0.1.18"
tokio-io = "0.1.5"
tokio-core = "0.1.12"
tokio-timer = "0.1.2"
quick-error = "1.2.1"
rand = "0.4.2"
mqtt3 = { git = "https://github.com/tekjar/mqtt3" }
#mqtt3 = {path = "../mqtt3"}

[lib]
name = "rumqttd"
path = "src/lib.rs"

[[bin]]
name = "rumqttd"
path = "src/main.rs"
